tests/snapshots/output/catalog__credential_schema.snap
---
source: tests/cli/snapshots.rs
---
$ vendo catalog credential-schema shopify
exit: 0
--- stdout ---
Credential fields for shopify:
  Shop domain (shop_domain) — text
    The store's myshopify.com domain
  Admin API access token (access_token) — password

Use these as keys in the JSON file you pass to --credentials-file for `vendo apps create`.
