tests/snapshots/output/catalog__credential_schema_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo catalog credential-schema shopify --json
exit: 0
--- stdout ---
{
  "appType": "shopify",
  "credentialFields": [
    {
      "name": "shop_domain",
      "label": "Shop domain",
      "type": "text",
      "placeholder": "demo-shop.myshopify.com",
      "description": "The store's myshopify.com domain"
    },
    {
      "name": "access_token",
      "label": "Admin API access token",
      "type": "password",
      "placeholder": "shpat_…",
      "description": null
    }
  ]
}
