tests/snapshots/output/catalog__credential_schema_none.snap
---
source: tests/cli/snapshots.rs
---
$ vendo catalog credential-schema bigquery
exit: 0
--- stdout ---
No credential fields declared for bigquery.
